KTS-3741 "The Property Preview Panel lacks a scroll bar" Fixed. Moved the overflow to the panel window instead of the content div.
Committed by: Megan Watson
Reviewed by: Conrad Vermeulen



git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@9441 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/plugins/ktstandard/documentpreview/resources/container.css
+++ b/plugins/ktstandard/documentpreview/resources/container.css
@@ -27,8 +27,8 @@
     padding-right: 10px;
     padding-bottom: 0px;
     cursor: pointer;
-    height: 250px;
-    overflow: auto;
+    /*height: 250px;
+    overflow: auto;*/
     clear: both;
 }
 
@@ -131,4 +131,5 @@
     border-bottom:1px solid #FFF;
     border-right:1px solid #FFF;
     background: transparent;
+    overflow: auto;
 }
